--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -44,46 +44,47 @@
   </style>
 
   <div id="filters">
-    <a href="/listings?category=Trending" class="filter text-decoration-none text-dark <%= activeCategory === 'trending' ? 'active-filter' : '' %>">
-      <div><i class="fa-solid fa-fire"></i></div>
-      <p>Trending</p>
-    </a>
-    <a href="/listings?category=Rooms" class="filter text-decoration-none text-dark <%= activeCategory === 'rooms' ? 'active-filter' : '' %>">
-      <div><i class="fa-solid fa-bed"></i></div>
-      <p>Rooms</p>
-    </a>
-    <a href="/listings?category=Iconic Cities" class="filter text-decoration-none text-dark <%= activeCategory === 'iconic cities' ? 'active-filter' : '' %>">
-      <div><i class="fa-solid fa-mountain-city"></i></div>
-      <p>Iconic Cities</p>
-    </a>
-    <a href="/listings?category=Mountains" class="filter text-decoration-none text-dark <%= activeCategory === 'mountains' ? 'active-filter' : '' %>">
-      <div><i class="fa-solid fa-mountain"></i></div>
-      <p>Mountains</p>
-    </a>
-    <a href="/listings?category=Castles" class="filter text-decoration-none text-dark <%= activeCategory === 'castles' ? 'active-filter' : '' %>">
-      <div><i class="fa-brands fa-fort-awesome"></i></div>
-      <p>Castles</p>
-    </a>
-    <a href="/listings?category=Arctic" class="filter text-decoration-none text-dark <%= activeCategory === 'arctic' ? 'active-filter' : '' %>">
-      <div><i class="fa-regular fa-snowflake"></i></div>
-      <p>Arctic</p>
-    </a>
-    <a href="/listings?category=Camping" class="filter text-decoration-none text-dark <%= activeCategory === 'camping' ? 'active-filter' : '' %>">
-      <div><i class="fa-solid fa-campground"></i></div>
-      <p>Camping</p>
-    </a>
-    <a href="/listings?category=Farms" class="filter text-decoration-none text-dark <%= activeCategory === 'farms' ? 'active-filter' : '' %>">
-      <div><i class="fa-solid fa-cow"></i></div>
-      <p>Farms</p>
-    </a>
-    <a href="/listings?category=Snowboarding" class="filter text-decoration-none text-dark <%= activeCategory === 'snowboarding' ? 'active-filter' : '' %>">
-      <div><i class="fa-solid fa-person-snowboarding"></i></div>
-      <p>Snowboarding</p>
-    </a>
-    <a href="/listings?category=Beach" class="filter text-decoration-none text-dark <%= activeCategory === 'beach' ? 'active-filter' : '' %>">
-      <div><i class="fa-solid fa-umbrella-beach"></i></div>
-      <p>Beach</p>
-    </a>
+  <a href="/filters/Trending" class="filter text-decoration-none text-dark <%= activeCategory === 'trending' ? 'active-filter' : '' %>">
+    <div><i class="fa-solid fa-fire"></i></div>
+    <p>Trending</p>
+  </a>
+  <a href="/filters/Rooms" class="filter text-decoration-none text-dark <%= activeCategory === 'rooms' ? 'active-filter' : '' %>">
+    <div><i class="fa-solid fa-bed"></i></div>
+    <p>Rooms</p>
+  </a>
+  <a href="/filters/Iconic%20Cities" class="filter text-decoration-none text-dark <%= activeCategory === 'iconic cities' ? 'active-filter' : '' %>">
+    <div><i class="fa-solid fa-mountain-city"></i></div>
+    <p>Iconic Cities</p>
+  </a>
+  <a href="/filters/Mountains" class="filter text-decoration-none text-dark <%= activeCategory === 'mountains' ? 'active-filter' : '' %>">
+    <div><i class="fa-solid fa-mountain"></i></div>
+    <p>Mountains</p>
+  </a>
+  <a href="/filters/Castles" class="filter text-decoration-none text-dark <%= activeCategory === 'castles' ? 'active-filter' : '' %>">
+    <div><i class="fa-brands fa-fort-awesome"></i></div>
+    <p>Castles</p>
+  </a>
+  <a href="/filters/Arctic" class="filter text-decoration-none text-dark <%= activeCategory === 'arctic' ? 'active-filter' : '' %>">
+    <div><i class="fa-regular fa-snowflake"></i></div>
+    <p>Arctic</p>
+  </a>
+  <a href="/filters/Camping" class="filter text-decoration-none text-dark <%= activeCategory === 'camping' ? 'active-filter' : '' %>">
+    <div><i class="fa-solid fa-campground"></i></div>
+    <p>Camping</p>
+  </a>
+  <a href="/filters/Farms" class="filter text-decoration-none text-dark <%= activeCategory === 'farms' ? 'active-filter' : '' %>">
+    <div><i class="fa-solid fa-cow"></i></div>
+    <p>Farms</p>
+  </a>
+  <a href="/filters/Snowboarding" class="filter text-decoration-none text-dark <%= activeCategory === 'snowboarding' ? 'active-filter' : '' %>">
+    <div><i class="fa-solid fa-person-snowboarding"></i></div>
+    <p>Snowboarding</p>
+  </a>
+  <a href="/filters/Beach" class="filter text-decoration-none text-dark <%= activeCategory === 'beach' ? 'active-filter' : '' %>">
+    <div><i class="fa-solid fa-umbrella-beach"></i></div>
+    <p>Beach</p>
+  </a>
+
 
     <!-- Tax Toggle -->
     <div class="tax-toggle">
